wedding-dev/styles/gallery.css
/****************************
 *		1200px and up		*
 ****************************/
 
/* Page Structure */
 #gallery section {
	/* Prevent vertical gaps */
	line-height: 0;

	-webkit-column-count: 3;
	-webkit-column-gap:   0px;
	-moz-column-count:    3;
	-moz-column-gap:      0px;
	column-count:         3;
	column-gap:           0px;
	
	margin-bottom: 25px;
	overflow: visible;
}
#gallery h2 {
	font-family: Coronet, serif;
	text-align: center;
	font-size: 4em;
	padding: 25px 0;
}
#gallery span {
	display: block;
	color: #999;
	width: 100%;
	font-family: Lulo;
	text-align: center;
	font-size: 1em;
	margin-bottom: 1.5em;
}
#gallery section img {
	/* Just in case there are inline attributes */
	width: 100%;
	height: auto;
	
	/* For animations */
	opacity: 0;
	transition: all 200ms ease-in;
	
	/* Fix for column visibility bug on overflowing elements */
	-webkit-column-break-inside:avoid;
	-moz-column-break-inside:avoid;
	-o-column-break-inside:avoid;
	-ms-column-break-inside:avoid;
	column-break-inside:avoid;
	-webkit-backface-visibility:hidden;
}

/* For Fullscreen Mode */
.full-body-html {
	overflow: hidden;
}
.fullscreen-div {
	min-height:100%;
    min-width:100%;
    height:auto;
    width:auto;
    position:absolute;
    top:0; bottom:0;
    left:0; right:0;
    margin:auto;
	z-index: 100;
	background-color: #000;
	
	text-align: center;
	line-height: 100vh;
}
#gallery section .fullscreen-div img,
#gallery section .fullscreen-div img:hover {
	/* removes animation effects */
	-webkit-transform: 	none;
	-moz-transform: 	none;
	-o-transform: 		none;
	-ms-transform: 		none;
	transform: 			none;
	-webkit-transition: none;
	-moz-transition:	none;
	-o-transition: 		none;
	-ms-transition: 	none;
	transition: 		none;
	
	/* to maintain aspect ratio of fullscreen image */
	width: auto;
	height: auto;
	max-width:100%;
	max-height:100%;
	
	/* to vertically center image */
	display: inline-block;
	vertical-align: middle;
}

/* Required for hover to work */
#gallery section img:hover {
    -webkit-transform: 	scale(1.2);
    -moz-transform: 	scale(1.2);
    -o-transform: 		scale(1.2);
    -ms-transform: 		scale(1.2);
    transform: 			scale(1.2);
	-webkit-transition: transform 200ms ease-in;
	cursor: pointer;
}
#gallery section div {
	display: block;
	overflow: hidden;
}
/******************************
 *		800px to 1199px		  *
 ******************************/
@media (max-width: 1199px) {
	#gallery section {
		-moz-column-count:    3;
		-webkit-column-count: 3;
		column-count:         3;
	}
}
 /****************************
 *		600px to 799px		*
 ****************************/
@media (max-width: 799px) {
	#gallery section {
		-moz-column-count:    2;
		-webkit-column-count: 2;
		column-count:         2;
	}
	#gallery h2 {
		font-size: 3.5em;
	}
}
 
/****************************
 *		Up to 599px			*
 ****************************/
@media (max-width: 599px) {
	#gallery section {
		-moz-column-count:    1;
		-webkit-column-count: 1;
		column-count:         1;
	}
	#gallery h2 {
		font-size: 3em;
	}
}

